--- a/Login.htm
+++ b/Login.htm
@@ -8,7 +8,7 @@
         <image src="C:\Users\Joel\OneDrive\Documents\HTML\Swartz\logo.jpg" alt="" height="200px" width="200px"></image>
     </div>
     <div class ="LoginBox">
-        <form>
+        <form action="login.php" method="POST">
         <input type="text" id="Uname" name="Uname" placeholder="Username"><br><br>
         <input type="password" id="Password" name="Password" placeholder="Password">
         </form>
