--- a/ClientCreation.html
+++ b/ClientCreation.html
@@ -110,7 +110,7 @@ body {
 		<ul id="location-list"></ul>
 		
 		<label for="business_type">Business types:</label>
-		<input type="text" name="location" id="location">
+		<input type="text" name="businessType" id="business">
 		<button type="button" id="add-Bclass">Add</button>
 		<ul id="business-list"></ul>
 		
