--- a/CoveragesList.html
+++ b/CoveragesList.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Coverage Tracker</title>
 	<style>
-	.table{
+	table{
     background-color: white;
     width: 650px;
     height: 300px;
@@ -74,7 +73,6 @@ body {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
 }
-	</style>
 	</style>
     <script src="Client_Creation.js"></script>
 		<div id="mySidebar" class="sidebar">
