Fixed Joels css stuff

--- a/Login.htm
+++ b/Login.htm
@@ -1,11 +1,11 @@
 <html>
 <head>
 <title>Login</title>
-<link rel="stylesheet" href="C:\Users\Joel\OneDrive\Documents\HTML\Swartz\login.css">
+<link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class ="Image">
-        <image src="C:\Users\Joel\OneDrive\Documents\HTML\Swartz\logo.jpg" alt="" height="200px" width="200px"></image>
+        <image src="logo.jpg" alt="" height="200px" width="200px"></image>
     </div>
     <div class ="LoginBox">
         <form action="login.php" method="POST">
