--- a/Login.htm
+++ b/Login.htm
@@ -11,7 +11,8 @@
         <form action="login.php" method="POST">
         <input type="text" id="Uname" name="Uname" placeholder="Username"><br><br>
         <input type="password" id="Password" name="Password" placeholder="Password">
-        <a class="button" href="">Login</a>
+        <input type="submit" name="submit" class="btnSave" value="Submit">
+		<input type="submit" value="Cancel">
         <a class="navbuttons" href="">Forgot Password?</a>
         </form>
     </div>
