added session user and few logout options
kimballs login broken - works with invalid passwords

--- a/ClientCreation.html
+++ b/ClientCreation.html
@@ -130,6 +130,7 @@ body {
 		
 		<input type="submit" name="save_multiple_checkbox" class="btnSave" value="Submit">
 		<input type="submit" value="Cancel">
+		<a class='button1' href='logOut.php'>Log Out</a>
 		</div>
 	</form>
 </body>
