--- a/Login.htm
+++ b/Login.htm
@@ -8,11 +8,14 @@
         <image src="logo.jpg" alt="" height="200px" width="200px"></image>
     </div>
     <div class ="LoginBox">
-        <form action="login.php" method="POST">
-        <input type="text" id="Uname" name="Uname" placeholder="Username"><br><br>
-        <input type="password" id="Password" name="Password" placeholder="Password">
-        <input type="submit" name="submit" class="btnSave" value="Submit">
-		<input type="submit" value="Cancel">
+       <form action='login.php' method='post'>
+        <label for='username'>Username:</label>
+        <input type='text' id='username' name='username' required>
+		<br></br>
+        <label for='password'>Password:</label>
+        <input type='password' id='password' name='password' required>
+        <input type='submit' name='submit' value='Log In'>
+        </form>
         <a class="navbuttons" href="">Forgot Password?</a>
         </form>
     </div>
