--- a/ClientCreation.html
+++ b/ClientCreation.html
@@ -109,28 +109,36 @@ body {
 		<button type="button" id="add-location">Add</button>
 		<ul id="location-list"></ul>
 		
+		<label for="Mailing_Address">Mailing Address:</label>
+		<input type="text" id="Mailing_Address" name="Mailing_Address">
+		
+		<label for="Email_Adress">Email Address</label>
+		<input type="text" id="Email_Adress" name="Email_Adress">
+		
+		<label for="Phone_Number">Phone Number</label>
+		<input type="text" id="Phone_Number" name="Phone_Number">
+		
 		<label for="business_type">Business types:</label>
 		<input type="text" name="businessType" id="business">
 		<button type="button" id="add-Bclass">Add</button>
 		<ul id="business-list"></ul>
 		
+		<label for="Broker_ID">Broker ID</label>
+		<input type="text" id="Broker_ID" name="Broker_ID">
+		
 		<label for="Description">Description:</label><br>
 		<textarea id="Description" name="Description" rows="4" cols="50"></textarea><br>
 		
 		
-		<div class="form-group">
-		<input type="checkbox" id="Creditconsent" name="Consent[]" value="Credit Consent">
-		<label for="Creditconsent">Credit Consent</label><br>
 		
-		<input type="checkbox" id="PrivacyConsent" name="Consent[]" value="Privacy Consent">
-		<label for="PrivacyConsent"> Privacy Consent</label><br>
+		
+		<div class="form-group">
 		
 		<input type="checkbox" id="SRI" name="Consent[]" value="SRI Coverage Review">
 		<label for="SRI">SRI Coverage Review</label><br>
 		
 		<input type="submit" name="save_multiple_checkbox" class="btnSave" value="Submit">
 		<input type="submit" value="Cancel">
-		<a class='button1' href='logOut.php'>Log Out</a>
 		</div>
 	</form>
 </body>
