things bimball changed i think

--- a/ClientCreation.html
+++ b/ClientCreation.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -101,31 +102,24 @@ body {
 		<label for="Company">Company</label><br>
 		<input type="text" id="Company" name="Company" value="Company"><br><br>
 		
-		<label for="Client_ID">Client code</label><br>
-		<input type="text" id="Client_ID" name="Cname" value="Client Code"><br><br>
-		
-		<label for="location">Location:</label>
-		<input type="text" name="location" id="location">
-		<button type="button" id="add-location">Add</button>
-		<ul id="location-list"></ul>
 		
 		<label for="Mailing_Address">Mailing Address:</label>
 		<input type="text" id="Mailing_Address" name="Mailing_Address">
-		
+		<br>
+		<br>
 		<label for="Email_Adress">Email Address</label>
-		<input type="text" id="Email_Adress" name="Email_Adress">
-		
+		<input type="text" id="Email_Adress" name="Email_Address">
+		<br>
+		<br>
 		<label for="Phone_Number">Phone Number</label>
 		<input type="text" id="Phone_Number" name="Phone_Number">
-		
-		<label for="business_type">Business types:</label>
-		<input type="text" name="businessType" id="business">
-		<button type="button" id="add-Bclass">Add</button>
-		<ul id="business-list"></ul>
+		<br>
+		<br>
 		
 		<label for="Broker_ID">Broker ID</label>
 		<input type="text" id="Broker_ID" name="Broker_ID">
-		
+		<br>
+		<br>
 		<label for="Description">Description:</label><br>
 		<textarea id="Description" name="Description" rows="4" cols="50"></textarea><br>
 		
