--- a/CoverageReport.html
+++ b/CoverageReport.html
@@ -17,7 +17,7 @@
 
         button.backButton {
             background-color: lightgray;
-            color: white;
+            color: black;
             float: left;
             border: none;
             padding: 12px;
