--- a/ClientCreation.html
+++ b/ClientCreation.html
@@ -97,27 +97,27 @@ body {
 <body style="background-color:#D9D9D9">	
 	<form action="/ClientCreation.php" target="_self" method="POST">
 		<label for="Iname">Name of Insured</label><br>
-		<input type="text" id="Iname" name="Iname" value="insured"><br><br>
+		<input type="text" id="Iname" name="Iname" value="" required><br><br>
 		
 		<label for="Company">Company</label><br>
-		<input type="text" id="Company" name="Company" value="Company"><br><br>
+		<input type="text" id="Company" name="Company" value="" required><br><br>
 		
 		
 		<label for="Mailing_Address">Mailing Address:</label>
-		<input type="text" id="Mailing_Address" name="Mailing_Address">
+		<input type="text" id="Mailing_Address" name="Mailing_Address" required>
 		<br>
 		<br>
 		<label for="Email_Adress">Email Address</label>
-		<input type="text" id="Email_Adress" name="Email_Address">
+		<input type="text" id="Email_Adress" name="Email_Address" required>
 		<br>
 		<br>
 		<label for="Phone_Number">Phone Number</label>
-		<input type="text" id="Phone_Number" name="Phone_Number">
+		<input type="number" id="Phone_Number" name="Phone_Number" required>
 		<br>
 		<br>
 		
 		<label for="Broker_ID">Broker ID</label>
-		<input type="text" id="Broker_ID" name="Broker_ID">
+		<input type="number" id="Broker_ID" name="Broker_ID" required>
 		<br>
 		<br>
 		<label for="Description">Description:</label><br>
