--- a/CoverageList.html
+++ b/CoverageList.html
@@ -60,10 +60,10 @@
         <div class="optionList">
             <table>
                 <tr>
-                    <th>Coverage Type</th><th>ON</th><th>Applicable</th><th>Limit</th><th>Status</th><th>Date</th>
+                    <th>Coverage Type</th><th>ON</th><th>Limit</th><th>Status</th><th>Date</th>
                 </tr>
                 <tr>
-                    <td>Contents</td><td><input type="checkbox" checked></td><td><input type="checkbox"></td><td>$2500000</td><td>Accepted</td><td>12/11/2022</td>
+                    <td>Contents</td><td><input type="checkbox" checked></td><td>$2500000</td><td>Accepted</td><td>12/11/2022</td>
                 </tr>
             </table>
         </div>
