--- a/CoverageReport.html
+++ b/CoverageReport.html
@@ -1,43 +1,139 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Coverage Report</title>
-        <!--<link rel="stylesheet" type="text/css" href="/CoverageReport.css">-->
-        <style>
-            .sriHeading {
-                text-align: right;
-                width: 100%;
-                background-color: #5168AC;
-            }
-            .upperTable {
-               text-align: left;
-               width: 100%;
-            }
-            td {
-                border-bottom: 1px solid black;
-            }
-            .lowerTable {
-                text-align: center;
-                width: 100%;
-            }
-        </style>
-    </head>
-    <body style="background-color: #5168AC;">
-        <div class="sriHeading"><h1>Schwartz Reliance Insurance</h1></div>
-        <div style="background-color: lightgray;">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Coverage Report</title>
+    <!--<link rel="stylesheet" type="text/css" href="/CoverageReport.css">-->
+    <style>
+        div.pageContent {
+            float: left;
+        }
+
+        div.sriHeading {
+            text-align: right;
+            background-color: #5168AC;
+        }
+
+        button.backButton {
+            background-color: lightgray;
+            color: black;
+            float: left;
+            border: none;
+            padding: 12px;
+        }
+
+        button {
+            transition-delay: 0.1s;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #FFFFFF;
+            color: black;
+        }
+
+        div.clientTables {
+            background-color: lightgray;
+            padding: 12px;
+        }
+
+        table.upperTable {
+            text-align: left;
+            padding: 14px;
+        }
+
+        td.upperInfo {
+            border-bottom: 1px solid black;
+        }
+
+        table.lowerTable {
+            background-color: white;
+            text-align: center;
+            border-collapse: collapse;
+        }
+
+        td.lowerInfo {
+            padding: 14px;
+            border-top: 1px solid black;
+            border-bottom: 1px solid black;
+        }
+    </style>
+</head>
+
+<body style="background-color: #5168AC;">
+    <div class="pageContent">
+        <div class="sriHeading">
+            <button class="backButton">Back To Search</button>
+            <h3>Schwartz Reliance Insurance</h3>
+        </div><br>
+        <div class="clientTables">
             <table class="upperTable">
-                <tr><th>Client:</th><td>name</td><th>Broker:</th><td>name</td></tr>
-                <tr><th>Client Code:</th><td>code</td></tr>
-                <tr><th>Name of holder:</th><td>name</td></tr>
-                <tr><th>Email:</th><td>someone@domain.com</td></tr>
-                <tr><th>Phone:</th><td>number</td></tr>
-                <tr><th>Policy ID:</th><td>number</td></tr>
-                <tr><th>Provider:</th><td>name</td></tr>
+                <tr>
+                    <th>Client:</th>
+                    <td class="upperInfo">name</td>
+                    <th>Broker:</th>
+                    <td class="upperInfo">name</td>
+                </tr>
+                <tr>
+                    <th>Client Code:</th>
+                    <td class="upperInfo">code</td>
+                </tr>
+                <tr>
+                    <th>Name of holder:</th>
+                    <td class="upperInfo">name</td>
+                </tr>
+                <tr>
+                    <th>Email:</th>
+                    <td class="upperInfo">someone@domain.com</td>
+                </tr>
+                <tr>
+                    <th>Phone:</th>
+                    <td class="upperInfo">number</td>
+                </tr>
+                <tr>
+                    <th>Policy ID:</th>
+                    <td class="upperInfo">number</td>
+                </tr>
+                <tr>
+                    <th>Provider:</th>
+                    <td class="upperInfo">name</td>
+                </tr>
             </table><br>
-            <table border="1" bgcolor="white" class="lowerTable">
-                <tr><th>Coverage</th><th>Description</th><th>Amount Covered</th></tr>
+            <table class="lowerTable">
+                <tr>
+                    <th>Coverage</th>
+                    <th>Description</th>
+                    <th>Amount Covered</th>
+                </tr>
+                <tr>
+                    <td class="lowerInfo">Equipment</td>
+                    <td class="lowerInfo">Pub and Grill Equipment</td>
+                    <td class="lowerInfo">$2500000</td>
+                </tr>
+                <tr>
+                    <td class="lowerInfo">Equipment</td>
+                    <td class="lowerInfo">Pub and Grill Equipment</td>
+                    <td class="lowerInfo">$2500000</td>
+                </tr>
+                <tr>
+                    <td class="lowerInfo">Equipment</td>
+                    <td class="lowerInfo">Pub and Grill Equipment</td>
+                    <td class="lowerInfo">$2500000</td>
+                </tr>
+                <tr>
+                    <td class="lowerInfo">Equipment</td>
+                    <td class="lowerInfo">Pub and Grill Equipment</td>
+                    <td class="lowerInfo">$2500000</td>
+                </tr>
+                <tr>
+                    <td class="lowerInfo">Equipment</td>
+                    <td class="lowerInfo">Pub and Grill Equipment</td>
+                    <td class="lowerInfo">$2500000</td>
+                </tr>
             </table>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
