--- a/login.htm
+++ b/login.htm
@@ -1,9 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <title>Login</title>
 <link rel="stylesheet" href="login.css">
+<meta charset="utf-8">
 </head>
+<section class="header">
+    <h1>Swartz Reliance Insurance</h1>
+</section>
 <body>
+    <div class="nav">
     <div class ="Image">
         <image src="logo.jpg" alt="" height="200px" width="200px"></image>
     </div>
@@ -17,13 +23,8 @@
 		<br><br>
         <input type='submit' name='submit' value='Log In'>
         </form>
-        <a class="navbuttons" href="">Forgot Password?</a>
-        </form>
     </div>
-    
+    </div>
 </body>
-
-
-
 
 </html>
